# cayopay-server-rs

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DUPLICATION_STRATEGY.md  Dockerfile  GUIDELINES.md  REFACTORING_SUMMARY.md  VSA_ARCHITECTURE.md  flake.nix  justfile
api/: Cargo.toml
api/src/: error.rs  lib.rs
api/src/endpoints/: auth.rs  guest.rs  health.rs  invites.rs  mod.rs  user.rs
api/src/extractor/: authn.rs  authz.rs  mod.rs  validated_json.rs
api/src/models/: auth.rs  guest.rs  health.rs  invite.rs  mod.rs  user.rs
application/: Cargo.toml
application/src/: config.rs  error.rs  lib.rs  state.rs
application/src/services/: auth.rs  guest.rs  invite.rs  mod.rs  session.rs  user.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/models/: actor.rs  guest.rs  invite.rs  mod.rs  role.rs  session.rs  shop.rs  transaction.rs  user.rs  wallet.rs
domain/src/types/: email.rs  hashed_password.rs  mod.rs  money.rs  raw_password.rs
infra/: Cargo.toml
infra/src/services/: mod.rs
infra/src/stores/: guest.rs  invite.rs  mod.rs  session.rs  shop.rs  transaction.rs  user.rs  wallet.rs
infra/src/stores/models/: guest.rs  invite.rs  mod.rs  session.rs  shop.rs  transaction.rs  user.rs
migrations/: 20260201130100_create_actors.down.sql  20260201130100_create_actors.up.sql  20260201130200_create_users.up.sql  20260201130300_create_guests.up.sql  20260201175236_create_sessions.up.sql  20260201214232_table_invites.down.sql  20260201214232_table_invites.up.sql  20260202010549_add_roles.down.sql  20260202010549_add_roles.up.sql  20260202090300_create_wallets.up.sql  20260202090525_create_transactions.up.sql  20260203183958_setup_timestamp_audit.down.sql  20260203183958_setup_timestamp_audit.up.sql  20260203185634_create_identities.down.sql  20260203185634_create_identities.up.sql  20260203191619_create_sessions.down.sql  20260203191619_create_sessions.up.sql  20260203191938_create_invites.down.sql  20260203191938_create_invites.up.sql  20260203192407_create_financial.down.sql  20260203192407_create_financial.up.sql  20260204105627_create_shops.down.sql  20260204105627_create_shops.up.sql
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: actor.rs  auth.rs  extractor.rs  guest.rs  health.rs  invites.rs  mod.rs  user.rs
src/api/endpoints/: actor.rs  auth.rs  guest.rs  health.rs  invites.rs  mod.rs  user.rs
src/api/extractor/: authn.rs  authz.rs  validated_json.rs
src/api/models/: actor.rs  guest.rs  invite.rs  mod.rs  user.rs
src/bootstrap/: database.rs  mod.rs  seed.rs  tracing.rs
src/domain/: actor.rs  guest.rs  invite.rs  mod.rs  permission.rs  role.rs  session.rs  transaction.rs  user.rs  wallet.rs
src/features/: accept_invite.rs  health.rs  list_guests.rs  list_invites.rs  list_users.rs  login.rs  me.rs  mod.rs  send_invite.rs
src/features/auth/: handler.rs  models.rs  service.rs
src/features/guest_management/: handler.rs  models.rs  service.rs
src/features/onboarding/: handler.rs  mod.rs  models.rs  service.rs
src/features/user_management/: handler.rs  models.rs  service.rs
src/services/: actor.rs  auth.rs  email.rs  guest.rs  invite.rs  mod.rs  session.rs  user.rs
src/shared/: auth.rs  config.rs  email_service.rs  error.rs  health.rs  mod.rs  services.rs  state.rs
src/shared/extractors/: authn.rs  authz.rs  mod.rs  validated_json.rs
src/shared/stores/: actor.rs  guest.rs  invite.rs  session.rs  shop.rs  transaction.rs  user.rs  wallet.rs
src/shared/stores/models/: actor.rs  shop.rs  transaction.rs  wallet.rs
src/stores/: actor.rs  guest.rs  invite.rs  invite_store.rs  mod.rs  session_store.rs  transaction.rs  user.rs  user_store.rs  wallet.rs
src/types/: email.rs  hashed_password.rs  id.rs  mod.rs  raw_password.rs
