[package]
name = "cayopay-server"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["api", "application", "domain", "infra"]

[dependencies]
# Workspace members
api = { path = "./api" }
application = { path = "./application" }
domain = { path = "./domain" }
infra = { path = "./infra" }

# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Web Framework
axum = "0.7"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
