[package]
name = "cayopay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Domain (kept separate for shared types)
domain = { path = "./domain" }

# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.8", features = ["v7", "serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
time = "0.3.46"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
envy = "0.4"

# Security
argon2 = { version = "0.5", features = ["std"] }

# Email
lettre = { version = "0.11.19", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
    "pool"
] }

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.0", features = ["axum"] }
