[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infra = { path = "../infra" }

# Async
tokio = { version = "1.37", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.8", features = ["v7", "serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"

# Environment
dotenvy = "0.15"
envy = "0.4"

# Security
argon2 = { version = "0.5", features = ["std"] }
